@startuml ApresentacaoLobby
hide empty members
skinparam classAttributeIconSize 0

class User {
  +id: UInt
}

class AuthUser {
  +token: String
  +gameId: UInt?
  +tokenRefresh: Instant
  +tokenExpiration: Instant
}

class Table {
  +id: UInt
}

class Participant { }

enum Role {
  PLAYER
  READY
  SPECTATOR
}

class Name <<value>> {
  +string: String
}

class Email <<value>> {
  +string: String
}

class Password <<value>> {
  +string: String
}

User *-- "0..1" AuthUser : auth
User *-- Name : name
User *-- Email : email
User *-- Password : password

Table *-- Name : name
Table --> "1" User : owner
Table *-- "0..*" Participant : participants

Participant --> "1" User : user
Participant --> "1" Role : role

@enduml
